...
                // [*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*]
                // [*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][ MARK: NAME
                // [*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*]
                
                VStack(alignment: .center, spacing: 0) {
                    HStack {
                        Text("name:")
                            .foregroundColor(Color.secondary)
                        Text(veterinarian.name)
                            .foregroundColor(Color.primary)
                    }
                    .font(.body)
                    HStack {
                        Text("id:")
                            .foregroundColor(Color.secondary)
                        Text(veterinarian.id.uuidString)
                            .foregroundColor(Color.primary)
                    }
                    .font(.caption2)
                    
...
                // [*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][ MARK: DETAILS
                // [*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*][*]
                
                VStack(alignment: .vjotVetdH, spacing: 0) {
                    if let address = veterinarian.address {
                        HStack {
                            Text("Address:")
                                .foregroundColor(Color.secondary)
                            Text(address)
                                .foregroundColor(Color.primary)
                                .alignmentGuide(.vjotVetdH) { $0[.leading] }
                        }
                    }
                    if let postCode = veterinarian.postCode {
                        HStack {
                            Text("Post-code:")
                                .foregroundColor(Color.secondary)
                            Text(postCode)
                                .foregroundColor(Color.primary)
                                .alignmentGuide(.vjotVetdH) { $0[.leading] }
                        }
                    }
                    if let city = veterinarian.city {
                        HStack {
                            Text("City:")
                                .foregroundColor(Color.secondary)
                            Text(city)
                                .foregroundColor(Color.primary)
                                .alignmentGuide(.vjotVetdH) { $0[.leading] }
                        }
                    }
                    if let country = veterinarian.country {
                        HStack {
                            Text("Country:")
                                .foregroundColor(Color.secondary)
                            Text(country)
                                .foregroundColor(Color.primary)
                                .alignmentGuide(.vjotVetdH) { $0[.leading] }
                        }
                    }
                    if let telephoneNumber = veterinarian.telephoneNumber {
                        HStack {
                            Text("Telephone number:")
                                .foregroundColor(Color.secondary)
                            Text(telephoneNumber)
                                .foregroundColor(Color.primary)
                                .alignmentGuide(.vjotVetdH) { $0[.leading] }
                        }
                    }
                    if let emailAddress = veterinarian.emailAddress {
                        HStack {
                            Text("Email address:")
                                .foregroundColor(Color.secondary)
                            Text(emailAddress)
                                .foregroundColor(Color.primary)
                                .alignmentGuide(.vjotVetdH) { $0[.leading] }
                        }
                    }
...
            .navigationSplitViewStyle(.automatic)
            .toolbar {
                ToolbarItemGroup(placement: .navigationBarTrailing) {
                    Button {
                        updateIsPresented.toggle()
                    } label: {
                        Label("Edit", systemImage: "square.and.pencil")
                            .font(.headline)
                    }
                }
            }
            
            // --------------------------------------------
...
