...
                        telephoneNumber: "+306945858108"
                    )
                ]
            ),
            descriptionOfAnimal: DescriptionOfAnimal(
                pictureId: nil,
                name: "Tsonara",
                species: .cat,
                breed: "Abyssinian",
                sex: .female,
                dateOfBirth: Date(timeIntervalSinceReferenceDate: 243543643),
                colour: Color(red: 0.4, green: 0.2, blue: 0),
                notableOrDiscernableFeaturesOrCharacteristics: "Vel rerum saepe est consequuntur fugiat sed voluptatum atque."
...
                tattooAlphanumericCode: nil,
                dateOfApplicationOrReadingOfTheTattoo: nil,
                locationOfTheTattoo: nil
            ),
            issuingOfThePassport: IssuingOfThePassport(
                authorisedVeterinarian: IssuingOfThePassport.AuthorisedVeterinarian(
                    name: "Eleftheria Saridaki",
                    address: "Papandreou Andrea 84",
                    postCode: "GR-731 34",
                    city: "Chania",
                    country: "Greece",
                    telephoneNumber: "+306984739314",
                    emailAddress: "elsaridak@gmail.com",
...
                            batchNumber: "9"
                        ),
                        vaccinationDate: Date(timeIntervalSinceReferenceDate: 246711333),
                        validFrom: Date(timeIntervalSinceReferenceDate: 246711333),
                        validUntil: Date(timeIntervalSinceReferenceDate: 246811333),
                        authorisedVeterinarian: VaccinationAgainstRabies.Vaccination.AuthorisedVeterinarian(
                            name: "Martha Saridaki",
                            address: "Garivaldi 98, GR-431 31, Karditsa,Greece",
                            telephoneNumber: "+306986158848",
                            spNumber: "606"
                        )
                    ),
                    VaccinationAgainstRabies.Vaccination(
...
                            batchNumber: "6"
                        ),
                        vaccinationDate: Date(timeIntervalSinceReferenceDate: 246311333),
                        validFrom: Date(timeIntervalSinceReferenceDate: 246713333),
                        validUntil: Date(timeIntervalSinceReferenceDate: 246814333),
                        authorisedVeterinarian: VaccinationAgainstRabies.Vaccination.AuthorisedVeterinarian(
                            name: "Nikos Saridakis",
                            address: "Iroon Politechniou 72B, GR-157 72, Zografos, Greece",
                            telephoneNumber: "+30948604489",
                            spNumber: "607"
                        )
                    )
                ]
...
                    AntiEchinococcusTreatment.Treatment(
                        id: UUID(),
                        product: AntiEchinococcusTreatment.Treatment.Product(manufacturer: "Thorn", productName: "Twist"),
                        date: Date(timeIntervalSinceReferenceDate: 256741643),
                        time: Date(timeIntervalSinceReferenceDate: 256741333),
                        authorisedVeterianarian: AntiEchinococcusTreatment.Treatment.AuthorisedVeterinarian(
                            name: "Michalis Saridakis",
                            address: "Zymvrakakidon 41, GR-731 35, Chania, Greece",
                            telephoneNumber: "+306945858108",
                            spNumber: "605"
                        )
                    )
                ]
...
